tests/golden/invalid/recursive-02.rego
package recursive_02

foo {
    data.recursive_02.foo
}
